k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: greeter
  labels: &labels
    app: greeter
spec:
  selector: *labels
  ports:
    - port: 8080
      targetPort: 8080
