k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: greeter
  name: greeter
  namespace: tektontutorial
spec:
  host: greeter-tektontutorial.apps.ocp1.galaxy.io
  port:
    targetPort: 8080
  to:
    kind: Service
    name: greeter
    weight: 100
  wildcardPolicy: None
